# LLM-Evaluation-Framework

./: .env.template  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  Dockerfile  Dockerfile.guardrails  Dockerfile.testframework  LICENSE  README.md  docker-compose.yml  install_deps.sh  pyproject.toml
.air/plans/: convert-loguru-to-lazy-logging.plan.md  replace-deepteam-with-custom-redteam-layer.plan.md
_documents/: .gitkeep
_extras/: class_diagram.puml  technologies_diagram.puml
_extras/UML/: architecture_diagram.puml  class_diagram.puml  exemplary_testcase_result_file.puml  main_test.puml  sequence_diagram.puml  sequence_diagram_baseline_run.puml  sequence_diagram_populate_db.puml  sequence_diagram_rest_api.puml  sequence_diagram_summary.puml  technologies_diagram.puml
_extras/doc/: development.md  guardrails.md  troubleshooting.md
_extras/docker/: config.py  requirements.txt
_extras/frontend/: README.md  app.js  index.html  style.css
_extras/gcp/: template_info.md
_pgadmin/: servers.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_chatbot_response_evaluation_id_nullable.py  0003_run_status_and_analysis_version.py
extras/: architecture_diagram.puml
testframework/: __init__.py  cli.py  enums.py  models.py  storage.py
testframework/api/: __init__.py  app.py  asgi_server.py  constants.py  dependencies.py  errors.py  page.py
testframework/api/router/: __init__.py  health_router.py  test_run_read_router.py  test_run_write_router.py
testframework/attacks/: csv_vulnerability.py  pipeline.py
testframework/chatbot/: __init__.py  base.py  document_loader.py  langchain_chatbot.py  openai_chatbot.py  store.py  vector_store.py
testframework/chatbot/rag/: document_loader.py  store.py
testframework/chatbot/tools/: __init__.py  image_tool.py
testframework/chatbots/: __init__.py  base.py  dummy_chatbot.py  langchain_base_chatbot.py  langchain_chatbot.py  langchain_ollama_chatbot.py  store.py
testframework/chatbots/rag/: document_loader.py  store.py  vector_store.py
testframework/chatbots/tools/: __init__.py  image_tool.py
testframework/custom_attack_techniques/: __init__.py  attack_list_enhancer.py  techniques.py
testframework/custom_attack_techniques/cipher_code_expert/: __init__.py  cipher_code_expert.py  sources.txt  template.py
testframework/custom_attack_techniques/emotional_manipulation/: __init__.py  emotional_manipulation.py  schema.py  sources.txt  template.py
testframework/custom_attack_techniques/synthetic_context_injection/: __init__.py  schema.py  sources.txt  synthetic_context_injection.py  template.py
testframework/custom_attacks/: __init__.py
testframework/guardrail/: base.py  prompt_hardening.py  runner.py
testframework/guardrails/: DELETE_ME.py  FOO.py  __init__.py  base.py  guardrails_ai.py  llm_guard.py  prompt_hardening.py  runner.py  topics.py
testframework/guardrails/gcp_model_armor/: gcp_model_armor.py
testframework/guardrails/guardrails_ai/: __init__.py  constants.py  guardrails_ai.py
testframework/guardrails/lakera_guard/: __init__.py  lakera_guard.py
testframework/guardrails/llama_firewall/: __init__.py  llama_firewall.py  llama_firewall_with_metrics.py
testframework/guardrails/llm_guard/: __init__.py  constants.py  llm_guard.py
testframework/guardrails/prompt_hardening/: __init__.py  constants.py  prompt_hardening.py
testframework/metrics/: __init__.py  base_metric.py  privacy_violations.py  tool_call_code_injection.py
testframework/persistence/: importer.py  session.py
testframework/persistence/entity/: analysis.py  attack.py  base.py  chatbot_response.py  detection.py  enums.py  test_case.py  test_run.py
testframework/persistence/model/: __init__.py  analysis_model.py  attack_model.py  chatbot_model.py  detection_model.py  test_run_model.py
testframework/persistence/repository/: analysis_repository.py  mapper.py  test_run_repository.py
testframework/redteam/: __init__.py  metric_adapters.py  metric_protocol.py  registry.py  test_case.py
testframework/reporting/: __init__.py  analysis_csv.py  run_summary.py  scanner_summary.py
testframework/test/: base_test.py  baseline_test.py  default_test.py
testframework/testcase/: base.py  illegal_activity.py  indirect_prompt_injection_csv.py
testframework/testcases/: __init__.py  base.py
testframework/tests/: base_test.py  default_test.py
testframework/util/: OllamaGenerator.py  __init__.py  csv_loader.py  ollama_handler.py
tests/: conftest.py  test_error_handling.py
tests/api/: test_test_run_read_router.py  test_test_run_write_router.py
tests/chatbots/: test_chatbot_store.py  test_dummy_chatbot.py  test_langchain_chatbot_timeout_retry.py  test_langchain_ollama_chatbot.py  test_ollama_chatbot_lifecycle.py  test_ollama_handler.py
tests/core/: __init__.py  test_attack_list_enhancer.py  test_base_test_case.py  test_csv_loader.py  test_custom_attack_techniques.py  test_models.py  test_redteam_builder_routing.py  test_redteam_metric_protocol.py  test_redteam_technique_library.py  test_redteam_test_case_contract.py  test_storage.py  test_testcase_categories.py  test_tool_call_metric.py
tests/guardrails/: test_gcp_model_armor.py  test_guardrail_runner_skip_failed_queries.py  test_guardrails_lakera.py  test_guardrails_llm_guard.py  test_guardrails_prompt_hardening.py  test_llama_firewall_normalization.py
tests/persistence/: conftest.py  test_alembic_migration.py  test_analysis_service.py  test_cascade_delete.py  test_importer.py  test_mapper.py  test_pydantic_models.py  test_test_run_repository.py  test_test_run_service.py
tests/reporting/: test_analysis_csv.py  test_run_summary.py  test_scanner_summary.py
(+78 files in other folders)
