[project]
name = "llm-evaluation-framework"
version = "1.0.0"
description = "Test framework for evaluating LLM chatbot guardrails with a custom red-team layer."
authors = [{ name = "Florian Sauer" }]
requires-python = ">=3.13.0"

dependencies = [
    "openai>=2.24.0,<3.0.0",
    "deepeval>=4.0.0,<5.0.0",
    "loguru>=0.7.0,<1.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "opentelemetry-exporter-otlp>=1.39.1,<2.0.0",
    "ollama>=0.6.1,<1.0.0",
    "langchain>=1.2.10,<2.0.0",
    "langchain-openai>=1.1.10,<2.0.0",
    "langchain-postgres>=0.0.17,<1.0.0",
    "langchain-community>=0.4.1,<1.0.0",
    "langchain-text-splitters>=1.1.1,<2.0.0",
    "psycopg[binary]>=3.3.3,<4.0.0",
    "pypdf>=6.7.5,<7.0.0",
    "llm-guard>=0.3.16,<1.0.0",
    "llamafirewall>=1.0.3,<2.0.0",
    "google-cloud-modelarmor>=0.4.0,<1.0.0",
    "langchain-ollama>=1.0.0,<2.0.0",
    "pylint>=4.0.5,<5.0.0",
    "langchain-core>=1.2.15,<2.0.0",
]

[project.scripts]
llm-test-baseline = "testframework.cli:main"

[project.optional-dependencies]
dev = [
    "flake8>=7.3.0,<8.0.0",
    "flake8-pyproject>=1.2.0,<2.0.0",
    "flake8-docstrings>=1.7.0,<2.0.0",
    "pylint>=4.0.5,<5.0.0",
    "bandit>=1.9.4,<2.0.0",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
docstring-convention = "pep257"

[tool.pylint.main]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    # Docstrings handled by flake8-docstrings
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    # Style checks handled by flake8/PEP8
    "line-too-long",
    "invalid-name",
    "too-few-public-methods",
    "trailing-whitespace",
    "wrong-import-order",
    "ungrouped-imports",
    "wrong-import-position",
    "multiple-imports",
    "multiple-statements",
    "superfluous-parens",
    "unnecessary-semicolon",
    # Convention codes - style related
    "C0301",
    "C0302",
    "C0303",
    "C0304",
    "C0305",
    "C0321",
    "C0325",
    "C0327",
    "C0328",
]

[tool.bandit]
skips = ["B101"]
targets = ["testframework"]

[tool.uv]
package = true
